--- a/src/gui/static/index.html
+++ b/src/gui/static/index.html
@@ -1,1 +1,22 @@
-<!DOCTYPE html><html><head><title>Bilancia GUI</title><link rel='stylesheet' href='styles.css'></head><body><h1>Welcome to Bilancia</h1><script src='app.js'></script></body></html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Bilancia Dashboard</title>
+    <link rel="stylesheet" href="/static/styles.css">
+</head>
+<body>
+    <header>
+        <h1>Bilancia Dashboard</h1>
+        <p>Estado de los backends y rutas</p>
+    </header>
+    <main>
+        <section id="backend-status">
+            <h2>Backends Activos</h2>
+            <ul id="backend-list"></ul>
+        </section>
+    </main>
+    <script src="/static/app.js"></script>
+</body>
+</html>
