--- a/src/gui/static/index.html
+++ b/src/gui/static/index.html
@@ -16,7 +16,13 @@
             <h2>Backends Activos</h2>
             <ul id="backend-list"></ul>
         </section>
+        <section id="backend-chart">
+            <h2>Carga de Conexiones en Backends</h2>
+            <canvas id="connectionsChart"></canvas>
+        </section>
     </main>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="/static/app.js"></script>
 </body>
 </html>
+
