upgrading dependencies, warning, errors and making documentation

--- a/src/gui/static/index.html
+++ b/src/gui/static/index.html
@@ -3,21 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bilancia Dashboard</title>
+    <title>Flusso Dashboard</title>
     <link rel="stylesheet" href="/static/styles.css">
 </head>
 <body>
     <header>
-        <h1>Bilancia Dashboard</h1>
-        <p>Estado de los backends y rutas</p>
+        <h1>Flusso Dashboard</h1>
+        <p>Backend status and routes</p>
     </header>
     <main>
         <section id="backend-status">
-            <h2>Backends Activos</h2>
+            <h2>Active Backends</h2>
             <ul id="backend-list"></ul>
         </section>
         <section id="backend-chart">
-            <h2>Carga de Conexiones en Backends</h2>
+            <h2>Backend Connection Load</h2>
             <canvas id="connectionsChart"></canvas>
         </section>
     </main>
@@ -25,4 +25,3 @@
     <script src="/static/app.js"></script>
 </body>
 </html>
-
